*SVN*

* Print Rails version when starting console #7440 [eyematz]

* Fixed the placement of fixture files for nested models when generating through script/generate model #7547 [jkit]

* Added TEMPLATE option to rake doc:app to set a custom output template #7737 [Jakob S]

* Added VERBOSE option to rake db:migrate to turn off output #8204 [jbarnette]

* Fixed that rake doc:app should use UTF-8 #8906 [farzy]

* Fixes rake annotations to search erb and builder files as well #9150 [m.langenberg]

* Removed web_service generator [Koz]

* Added the :all option to config.plugins that'll include the rest of the plugins not already explicitly named #9613 [fcheung]. Example:

    # Loads :classic_pagination before all the other plugins
    config.plugins = [ :classic_pagination, :all ]

* Added symbols as a legal way of specifying plugins in config.plugins #9629 [tom]

* Removed deprecated task names, like clear_logs, in favor of the new namespaced style [DHH]

* Support multiple config.after_initialize blocks so plugins and apps can more easily cooperate.  #9582 [zdennis]

* Added db:drop:all to drop all databases declared in config/database.yml [DHH]

* Use attribute pairs instead of the migration name to create add and remove column migrations.  Closes #9166 [lifofifo]

	For example:

	ruby script/generation migration AddSomeStuffToCustomers first_name:string last_name:string
	
	or
	
	ruby script/generation migration RemoveSomeStuffFromCustomers first_name:string last_name:string

* Add ActiveResource to Rails::Info.  Closes #8741 [kampers]

* use Gem.find_name instead of search when freezing gems.  Prevent false positives for other gems with rails in the name. Closes #8729 [wselman]

* Automatically generate add/remove column commands in specially named migrations like AddLocationToEvent.  Closes #9006 [zenspider]

* Default to plural table name in Rails Generator if ActiveRecord is not present.  Closes #8963 [evan]
